[package]
name = "mtoh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Markdown to HTML"
repository = "https://github.com/s-aran/mtoh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = { version = "5.0" }
pulldown-cmark = "0.9.2"
toml = "0.5.9"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
grass = "0.11.2"
