[package]
name = "mtoh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Markdown to HTML"
repository = "https://github.com/s-aran/mtoh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = { version = "5.0.0" }
pulldown-cmark = "0.9.2"
toml = "0.5.9"
grass = "0.11.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
handlebars = "4.3.5"
regex = "1.7.0"
log = "0.4.17"
emojis = "0.5.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
